--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
@@ -19,6 +22,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
@@ -30,7 +34,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.11.3",
     "zod": "^3.22.4"
   }
 }
